--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   More coffee please.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://angelcampos.info" # the base hostname & protocol for your site, e.g. http://example.com
+domain: www.angelcampos.info
 twitter_username: _acampos
 github_username:  acampos1916
 
