--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: acampos1916+ghpages@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   More coffee please.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://angelcampos.info" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.angelcampos.info" # the base hostname & protocol for your site, e.g. http://example.com
 domain: www.angelcampos.info
 twitter_username: _acampos
 github_username:  acampos1916
