--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ twitter_username: _acampos
 github_username:  acampos1916
 
 # Build settings
-theme: minima
+remote_theme: pages-themes/dinky@v0.2.0
 plugins:
-  - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
