--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ twitter_username: _acampos
 github_username:  acampos1916
 
 # Build settings
+theme: minima
 remote_theme: pages-themes/dinky@v0.2.0
 plugins:
   - jekyll-remote-theme
